SERVER-20638 Reading profiling level shouldn't create databases that don't exist

Setting the profiling level will still create the database.

(cherry picked from commit e5883822fd2fc777fd3e3e6b766f54e2caa8e594)